# igp-ride

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
scripts/: bump_version.sh
skills/igp-ride-cli/: SKILL.md
src/igp_ride/: __init__.py  cli.py  client.py  config.py  daemon.py  database.py  models.py  parser.py  service.py  utils.py
tests/: test_cli.py  test_client.py  test_config.py  test_daemon.py  test_database.py  test_models.py  test_parser.py  test_service.py  test_utils.py
