[project]
name = "igp-ride"
version = "0.1.0"
description = "Minimal CLI for syncing IGPSPORT ride data"
readme = "README.md"
license = "MIT"
requires-python = ">=3.14"
authors = [
    { name = "YetYeti" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Environment :: Console",
    "Operating System :: OS Independent",
]
dependencies = [
    "fitparse>=1.2.0",
    "keyring>=25.7.0",
    "requests>=2.28.0",
]

[project.urls]
Homepage = "https://github.com/YetYeti/igp-ride"
Repository = "https://github.com/YetYeti/igp-ride"

[project.scripts]
igp-ride = "igp_ride.cli:main"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.basedpyright]
include = ["src"]
failOnWarnings = false

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "basedpyright>=1.37.1",
    "pytest>=9.0.2",
    "ruff>=0.14.14",
]
